# rustic-jsonrpc

./: .gitignore  Cargo.toml  README.md
rustic-jsonrpc-macro/: Cargo.toml
rustic-jsonrpc-macro/src/: lib.rs
src/: container.rs  lib.rs  registry.rs
