[package]
name = "rustic-jsonrpc"
version = "0.1.1"
edition = "2021"
description = "JSON-RPC 2.0 server library written in Rust"
license = "MIT"
repository = "https://github.com/luoshuqi/rustic-jsonrpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustic-jsonrpc-macro = { path = "rustic-jsonrpc-macro" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }