[package]
name = "rustic-jsonrpc-macro"
version = "0.1.6"
edition = "2021"
description = "JSON-RPC 2.0 server library written in Rust"
license = "MIT"
repository = "https://github.com/luoshuqi/rustic-jsonrpc"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.41", features = ["full", "visit-mut"] }
